implement unit testing for ImageLoader add maven surefire as plugin for mock testing